test/elaboration/bad/typeclass_noncanonical_typing_context_in_scheme.mle
class H 'a { x : 'a }
class H 'a => I 'a { y : 'a }
let ['a] [ H 'a, I 'a ] (z : 'a) = ['a] x['a]